# FEM_sensor

./: README.md  imu_accel.ino  setup.cfg
fem_sensor/: __init__.py  accelerometer.py  sensor.py
scripts/: README.md  accelerometer.py  read_imu.py
