[metadata]
name = fem_sensor
version = 0.0.1
description = Software for reading FEM sensor data
long_description = file: README.md
author = EIGSEP Team
author_email = chbye@berkeley.edu
license = MIT
url = https://github.com/EIGSEP/FEM_sensor
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >= 3.8
packages = find:
install_requires =
    redis

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-cov


[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
